# RustReaper

./: PROJECT explain  README.md
rustreaper/: Cargo.toml
rustreaper/docs/: README.md
rustreaper/rules/: rules.yara
rustreaper/scripts/: build.ps1  build.sh
rustreaper/src/: analyzer.rs  gui_server.rs  main.rs  models.rs  output.rs  parser.rs
rustreaper/tests/: analyzer_test.rs  parser_test.rs
rustreaper/web/: index.html
rustreaper/web/static/: ProgressBar.jsx  app.js  styles.css
