[package]
name = "rustreaper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-web-actors = "4.3"
actix-files = "0.6"
capstone = "0.11"
crossbeam-channel = "0.5"
lazy_static = "1.5"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yara = "0.19"
statrs = "0.16"
rayon = "1.7"
sqlite = "0.30"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
memchr = "2.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_System_Memory"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3"

[dev-dependencies]
mockall = "0.11"
tempfile = "3.8"